--- a/1.css/main_mobile.css
+++ b/1.css/main_mobile.css
@@ -67,10 +67,12 @@
 
     #slider{width: 100%; height: 1100px; background-color:black; text-align:center;  position:relative; overflow:hidden;}
     #slider Video{width: auto; height: 100%; position:absolute; top:50%; left: 50%; transform:translate(-50%,-50%);}
-    #text{width: 75%; height:17%; display:flex; justify-content: flex-start; align-items: center; z-index: 100; 
-        flex-direction:column; margin: 0 auto; position:absolute; top:60%; left: 13%; }
+    #text{width: 80%; height:14%; display:flex; justify-content: flex-start; align-items: center; z-index: 100; 
+        flex-direction:column; margin: 0 auto; position:absolute; top:60%; left: 12%; }
     
-    #text span{ font-size: 17px; position:absolute; bottom:70px; left:100; color: white; font-family:'Heirof bold'; text-shadow: 1px 0 10px rgba(0, 0, 0, 0.781);}
+    
+    #desktop-tt{ display:none; font-size: 17px; position:absolute; bottom:70px; left:100; color: white; font-family:'Heirof bold'; text-shadow: 1px 0 10px rgba(0, 0, 0, 0.781);}
+    #mobile-tt{font-size:17px; font-family:'Heirof bold'; text-shadow: 1px 0 10px rgba(0, 0, 0, 0.781);}
     #main-arrow{width: 40px; height: 36px; position:absolute; bottom:10px; left:100; color: white;
                 animation: mymove 1.5s infinite Alternate; cursor:pointer;
 
@@ -97,7 +99,7 @@
         flex-direction:column; text-align:center; margin: 250px 0 0 0; }
     .textbox1 > img{width: 200px; height: 60px; margin: 0 auto;}
 
-    .textbox1 p:nth-child(1){font-size:22px; margin: 5px 0; font-family:'Heirof bold'; text-shadow: 1px 0 10px rgba(0, 0, 0, 0.781); }
+    .textbox1 p:nth-child(1){font-size:21px; margin: 5px 0; font-family:'Heirof bold'; text-shadow: 1px 0 10px rgba(0, 0, 0, 0.781); }
 
     button{width: 130px; height: 40px; background-color: rgb(16, 43, 100);
         /* background-image:url('../img/water.jpg'); background-position: center;  */
@@ -263,9 +265,9 @@
 
         #directortext{width: 90%; height: 350px; display:flex; flex-direction:column; margin:0 auto; font-size: 20px; 
             font-family: 'papyrus'; text-align: center; font-size: 14px;}
-        #directortext span{font-size:17px; padding: 10px 0 30px 0;  font-family:'Heirof bold'; 
-            text-shadow: 1px 0 10px rgba(255, 255, 255, 0.493); margin:0 auto;}
-
+        #desktop-ditt{font-size:17px; padding: 10px 0 30px 0;  font-family:'Heirof bold'; 
+            text-shadow: 1px 0 10px rgba(255, 255, 255, 0.493); margin:0 auto;display:none;}
+            #mobile-ditt{font-size:20px; padding: 10px 0 30px 0;  font-family:'Heirof bold'; }
 
     #bg{width: 100%; height: 100%; background-color:black; background-image: url('../img/awardswallpaper.png'); background-position:center;
         background-size:contain; background-repeat: no-repeat; }
