--- a/1.css/main_tablet2.css
+++ b/1.css/main_tablet2.css
@@ -65,10 +65,11 @@
 
     #slider{width: 100%; height: 1100px; background-color:black; text-align:center;  position:relative; overflow:hidden;}
     #slider Video{width: auto; height: 100%; position:absolute; top:50%; left: 50%; transform:translate(-50%,-50%);}
-    #text{width: 70%; height:15%; display:flex; justify-content: center; align-items: center; z-index: 100; 
+    #text{width: 70%; height:20%; display:flex; justify-content: center; align-items: center; z-index: 100; 
         flex-direction:column; margin: 0 auto; position:absolute; top:67%; left: 17%; }
     
-    #text span{ font-size: 20px; position:absolute; bottom:90px; left:100; color: white; font-family:'Heirof bold'; text-shadow: 1px 0 10px rgba(0, 0, 0, 0.781);}
+    #desktop-tt{ display:none; font-size: 20px; position:absolute; bottom:90px; left:100; color: white; font-family:'Heirof bold'; text-shadow: 1px 0 10px rgba(0, 0, 0, 0.781);}
+    #mobile-tt{font-size: 20px; font-family:'Heirof bold'; text-shadow: 1px 0 10px rgba(0, 0, 0, 0.781);}
     #main-arrow{width: 58px; height: 50px; position:absolute; bottom:20px; left:100; color: white;
                 animation: mymove 1.5s infinite Alternate; cursor:pointer;
 
@@ -129,21 +130,21 @@
     #slide2innerbox{width: 500px; height: 400px; display:flex; justify-content: center; align-items: center; flex-direction: column; 
         background-color:rgba(0, 0, 0, 0.423); margin: 0 10px; padding: 20px 20px;}
     
-#slide-3{width:100%; height: 800px; background-image:url('../img/wallpaper3.jpg'); background-position:center; background-size:cover;
+#slide-3{width:100%; height: 1100px; background-image:url('../img/wallpaper3.jpg'); background-position:center; background-size:cover;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.804) 0px 18px 36px -18px inset;}
 
-    .textbox3{width: 100%; height: 650px; display:flex; justify-content: center; backdrop-filter: blur(2px);  margin: 0 auto;
+    .textbox3{width: 100%; height: 750px; display:flex; justify-content: center; backdrop-filter: blur(2px);  margin: 0 auto;
         flex-direction:column; text-align:center; margin-top: 100px;}
-    .textbox3 p:nth-child(1){font-size:30px; margin: 0 0 40px 0;  font-family:'Heirof bold'; text-shadow: 1px 0 10px rgba(0, 0, 0, 0.781);}
+    .textbox3 p:nth-child(1){font-size:30px; margin: 100px 0 40px 0;  font-family:'Heirof bold'; text-shadow: 1px 0 10px rgba(0, 0, 0, 0.781);}
     #s3imgbox1{width: 90%; height: 600px; display:flex; justify-content: flex-start; 
         align-items: center; margin:0 auto; position:relative; overflow-x: scroll;}
     #s3imgbox1 > *{width: 25%; height:300px; transition: transform 250ms; margin: 0 5px;}
-    #comic1:hover{transform: translateY(-20px); cursor:pointer;}
-    #comic2:hover{transform: translateY(-20px); cursor:pointer;}
-    #comic3:hover{transform: translateY(-20px); cursor:pointer;}
-    #comic4:hover{transform: translateY(-20px); cursor:pointer;}
-    #comic5:hover{transform: translateY(-20px); cursor:pointer;}
-    #comic6:hover{transform: translateY(-20px); cursor:pointer;}
+    #comic1:hover{transform: translateY(-30px); cursor:pointer;}
+    #comic2:hover{transform: translateY(-30px); cursor:pointer;}
+    #comic3:hover{transform: translateY(-30px); cursor:pointer;}
+    #comic4:hover{transform: translateY(-30px); cursor:pointer;}
+    #comic5:hover{transform: translateY(-30px); cursor:pointer;}
+    #comic6:hover{transform: translateY(-30px); cursor:pointer;}
 
 /* 
     #s3imgbox2{width: 90%; height: auto; display:flex; justify-content: space-around; align-items: center; margin:0 auto;
@@ -184,14 +185,14 @@
     }
 
 
-#slide-4{width:100%; height: 1500px; background-image:url('../img/wallpaper4.jpg'); background-position:center; background-size:cover;
+#slide-4{width:100%; height: 1700px; background-image:url('../img/wallpaper4.jpg'); background-position:center; background-size:cover;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.836) 0px 18px 36px -18px inset; position:relative;}
     #slide-4bush{width: 100%; height: 35%;  bottom:-10px; left:0; position:absolute;
         filter: drop-shadow(2px 2px 5px  rgba(0, 0, 0, 0.868));}
 
     .textbox4{width: 100%; height: 1100px; display:flex; justify-content: center;  margin: 0 auto;
         flex-direction:column; text-align:center; }
-    .textbox4 p:nth-child(1){font-size:30px; margin: 150px 0 100px 0;  font-family:'Heirof bold'; text-shadow: 1px 0 10px rgba(0, 0, 0, 0.781);}
+    .textbox4 p:nth-child(1){font-size:30px; margin: 400px 0 150px 0;  font-family:'Heirof bold'; text-shadow: 1px 0 10px rgba(0, 0, 0, 0.781);}
 
         #s4inforbox{width: 95%; height: 900px; display:flex; justify-content: space-around; align-items: center; margin:0 auto;
                     font-weight: bolder; flex-direction: column;}
@@ -264,8 +265,10 @@
 
         #directortext{width: 80%; height: 300px; display:flex; flex-direction:column; margin:0 auto; font-size: 14px; 
             font-family: 'papyrus'; text-align: center;}
-        #directortext span{font-size:28px; padding: 10px 0 30px 0;  font-family:'Heirof bold'; 
+        #desktop-ditt{font-size:28px; padding: 10px 0 30px 0;  font-family:'Heirof bold'; display:none;
             text-shadow: 1px 0 10px rgba(255, 255, 255, 0.493); margin:0 auto;}
+        
+        #mobile-ditt{font-size:28px; padding: 10px 0 30px 0;  font-family:'Heirof bold'; }
 
 
     #bg{width: 100%; height: 100%; background-color:black; background-image: url('../img/awardswallpaper.png'); background-position:center;
